# phd_integrator_project

./: .gitignore  README.md  Snakefile  pyproject.toml
.github/workflows/: ci_cd_pipeline.yml
data/raw_sensors/: climate_readings.parquet
notebooks/: rapport_final.ipynb
scripts/: analyze_stability.py  generate_plots.py  ingest_and_vectorize.py  train_pinn.py
src/: deep_pinn.py  hpc_acceleration.py  numerical_core.py  stability_analysis.py  symbolic_derivation.py  visualization.py
tests/: test_core.py  test_hpc.py  test_pinn.py  test_symbolic.py  test_visualization.py
