[project]
name = "phd-integrator-project"
version = "0.1.0"
description = "TP2 - Du Calcul Symbolique a l'IA Scientifique Multi-GPU avec Automatisation de la Reproductibilite (CI/CD)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sympy>=1.12",
    "polars>=0.20",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "numba>=0.59",
    "torch>=2.2",
    "snakemake>=7.32,<8",
    "pulp<2.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
exclude = ["Snakefile"]

[[tool.mypy.overrides]]
module = [
    "numba.*",
    "plotly.*",
    "snakemake.*",
    "scipy.*",
    "seaborn.*",
    "polars.*",
    "sympy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.hpc_acceleration"
disallow_untyped_calls = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "src.deep_pinn"
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
